all endpoints working
